--- a/index.html
+++ b/index.html
@@ -32,6 +32,19 @@
 		});
 	</script>
 	<script src="//connect.facebook.net/en_US/all.js"></script>
+
+	<meta property="og:title" content="hello" />
+	<meta property="og:image" content="images/imgtest/result/r1.jpg" />
+
+	<meta property="og:site_name" content="Johnny">
+	<meta property="og:description" content="你的人生就像是">
+	<meta property="og:title" content="你的人生就像是">
+	<meta property="og:url" content="http://45.55.194.174/whoAmI/">
+	<meta property="og:image" content="images/imgtest/result/r1.jpg">
+	<meta property="og:image:height" content="630">
+	<meta property="og:type" content="article">
+	<meta property="og:image:width" content="1200">
+	<meta property="og:image:type" content="image/jpeg">
 </head>
 <body class="backgroundImg">
 <script>
