--- a/index.html
+++ b/index.html
@@ -128,9 +128,7 @@
 									</div>
 									<div class="secdFoot ">
 										<span>
-											<h5><i class="text-muted pull-right"></i> Paris, France</h5>
-											<h5><i class="text-muted pull-right"></i> Creative Tim Inc. </h5>
-											<h5><i class="text-muted pull-right"></i> john@creative-tim</h5>
+											<h3 id="prom1" class="prom"> Prom</h3>
 										</span>
 										<span>
 											<a><img rel="tooltip" title="Buy me!" class="btn btn-simple img-circle" src="images/card_buy.png"/></a>
@@ -197,9 +195,7 @@
 									</div>
 									<div class="secdFoot ">
 										<span>
-											<h5><i class="text-muted pull-right"></i> Paris, France</h5>
-											<h5><i class="text-muted pull-right"></i> Creative Tim Inc. </h5>
-											<h5><i class="text-muted pull-right"></i> john@creative-tim</h5>
+											<h3 id="prom3" class="prom"> Prom</h3>
 										</span>
 										<span>
 											<a><img rel="tooltip" title="Buy me!" class="btn btn-simple img-circle" src="images/card_buy.png"/></a>
@@ -276,7 +272,7 @@ var maxCardN = 4;
     $().ready(function(){
         $('[rel="tooltip"]').tooltip();
         
-		//test
+		//test_S
 		$("#page1").hide();
 		$("#page2").show();
 		var cari = 1;
@@ -291,6 +287,12 @@ var maxCardN = 4;
 				}
 			},100);
 		},100);
+		
+		$("#card"+1+"itemImg").prop('src','images\\imgtest\\images\\'+srcAry[RandomIndex[0]].imgSrc);
+		$("#card"+3+"itemImg").prop('src','images\\imgtest\\images\\'+srcAry[RandomIndex[1]].imgSrc);
+		$("#prom"+1).html(srcAry[RandomIndex[0]].promo);
+		$("#prom"+3).html(srcAry[RandomIndex[1]].promo);
+		//test_E
     });
 	
 	function nextStep(){
@@ -298,8 +300,8 @@ var maxCardN = 4;
 		$('body').css({'background-color':'#ffffff'});
 		$("#world").css({"z-index":1000});
 		setTimeout(function(){
-			$("#card"+1+"itemImg").prop('src','images\imgtest\images\\'+srcAry[RandomIndex[0]]);
-			$("#card"+4+"itemImg").prop('src','images\imgtest\images\\'+srcAry[RandomIndex[1]]);
+			$("#card"+1+"itemImg").prop('src','images\imgtest\images\\'+srcAry[RandomIndex[0]].imgSrc);
+			$("#card"+4+"itemImg").prop('src','images\imgtest\images\\'+srcAry[RandomIndex[1]].imgSrc);
 			
 			app.run();
 			showResultCard();
