--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 	<meta property="og:site_name" content="Johnny">
 		<meta property="og:title" content="你的人生就像是">
-	<meta property="og:description" content="青蔥蘇打餅乾 加上 靠得住 就甘心～">
+	<meta property="og:description" content="紅燒鰻 混合 堅果山核桃 好勵志～">
 	<meta property="og:url" content="http://45.55.194.174/whoAmI/">
 	<meta property="og:image" content="http://45.55.194.174/whoAmI/images/imgtest/result/r2.jpg">
 	<meta property="og:image:height" content="630">
