update share url

--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@ var maxCardN = 4;
 	{
   		FB.ui({
 		  method: 'share',
-		  href: 'https://developers.facebook.com/docs/',
+		  href: 'http://45.55.194.174/whoAmI/index.html',
 		}, function(response){});
   	});
   });
