add input placeholder

--- a/index.html
+++ b/index.html
@@ -64,11 +64,11 @@
 									<div class="main">
 										<div class="form-group cfont1">
 											<label for="name" >姓名:</label>
-											<input type="text" class="form-control" id="name">
+											<input placeholder="郝棒伯" type="text" class="form-control" id="name">
 											<label for="birthday">生日:</label>
-											<input type="text" class="form-control" id="birthday">
+											<input placeholder="2015/01/01" type="text" class="form-control" id="birthday">
 											<label for="sex">性別:</label>
-											<input type="text" class="form-control" id="sex">
+											<input placeholder="男" type="text" class="form-control" id="sex">
 										</div>
 									</div>
 									</div>
