--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 					<div class="card-container manual-flip">
 						<div class="card">
 							<div class="intro">
-							   <img src="images/WHO AM I.jpg" />
+							   <img src="images/WHO AM I2.jpg" />
 							</div>
 						</div>
 					</div>
